@@ -21,6 +21,9 @@ import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDate;
 import java.util.Arrays;
@@ -171,23 +174,29 @@ class ClientWorkflowServiceTest {
 
     @Test
     void getAllClientProjects_Success() {
-        List<Project> projects = Arrays.asList(mockProject);
-        when(projectService.getProjectsByClientId(mockClient.getId())).thenReturn(projects);
+        Page<Project> projectPage = new PageImpl<>(List.of(mockProject));
+        when(projectService.getProjectsByClientId(eq(mockClient.getId()), any(Pageable.class)))
+                .thenReturn(projectPage);
 
-        List<ProjectDto> result = clientWorkflowService.getAllClientProjects(mockClient);
+        Page<ProjectDto> result = clientWorkflowService.getAllClientProjects(mockClient, Pageable.unpaged());
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(mockProject.getId());
-        assertThat(result.get(0).getTitle()).isEqualTo(mockProject.getTitle());
+        assertThat(result.getContent()).hasSize(1);
+        assertThat(result.getContent().get(0).getId()).isEqualTo(mockProject.getId());
+        assertThat(result.getContent().get(0).getTitle()).isEqualTo(mockProject.getTitle());
+        verify(projectService).getProjectsByClientId(eq(mockClient.getId()), any(Pageable.class));
     }
 
     @Test
     void getAllClientProjects_WhenNoProjects_ReturnsEmptyList() {
-        when(projectService.getProjectsByClientId(mockClient.getId())).thenReturn(Collections.emptyList());
+        Page<Project> emptyPage = Page.empty();
+        when(projectService.getProjectsByClientId(eq(mockClient.getId()), any(Pageable.class)))
+                .thenReturn(emptyPage);
 
-        List<ProjectDto> result = clientWorkflowService.getAllClientProjects(mockClient);
+        Page<ProjectDto> result = clientWorkflowService.getAllClientProjects(mockClient, Pageable.unpaged());
 
-        assertThat(result).isEmpty();
+        assertThat(result.getContent()).isEmpty();
+        assertThat(result.getTotalElements()).isZero();
+        verify(projectService).getProjectsByClientId(eq(mockClient.getId()), any(Pageable.class));
     }
 
     @Test
